<resources>
    <string name="app_name">demo</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="password">密码</string>
    <string name="textViewName">TextView</string>
    <string name="textViewPrice">TextView</string>
    <string name="textViewLocation">TextView</string>
    <string name="textViewDistance">TextView</string>
    <string name="textViewTime">TextView</string>
    <string name="logo">LOGO</string>
</resources>
